--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 	<div class="wrapper">
 
-		<canvas id="canvas" style="background: url('/img/road1.gif');"></canvas>
+		<canvas id="canvas" style="background-color: black;"></canvas>
 
 	</div>
 	<script src="./gra.js"></script>
